Use overflow to prevent vertical scrolling
Instead of display: none, more consistent and robust when inserting
columns for event focus

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -157,8 +157,10 @@ td:nth-child(2) {
     font-size: calc(100vw / 28);
   }
 
-  div.subway {
+  div#subway {
     background: var(--banner-bg-color);
+    width: 100%;
+    overflow-x: hidden;
   }
 
   main {
@@ -180,11 +182,6 @@ td:nth-child(2) {
 
   th {
     top: 4em;
-  }
-
-  th:nth-child(n+5),
-  td:nth-child(n+5) {
-    display: none;
   }
 }
 
